Cyberduck
https://cyberduck.io/

6.3.6
- [Bugfix] Do not save passphrase for vaults by defaults (Cryptomator, Windows)
- [Bugfix] Application freezes for long time when selecting many files for upload (Windows)

6.3.5
- [Bugfix] Crash on launch in update checker (Windows)

6.3.4
- [Bugfix] Application error when opening connection to BigCommerce (WebDAV)
- [Bugfix] Preload CloudFront configurations for buckets to allow display of CDN URLs (S3) (#10184)

6.3.3
- [Feature] Support authenticating with HTTP proxy (Windows)
- [Bugfix] Display of created date instead of modification date (WebDAV)
- [Bugfix] Custom disk icon from connection profile not displayed in bookmarks (Windows)
- [Bugfix] Application error when opening connection (DRACOON) (Windows)

6.3.2
- [Feature] Option to save passwords (Cyberduck CLI, Linux)
- [Bugfix] Failure parsing permissions from MLSD reply (FTP)
- [Bugfix] Signed links incorrectly URL-encoded (Triton) (#10151)
- [Bugfix] Passwords not saved in keychain (SFTP) (#10159)
- [Bugfix] Set modification date on uploaded files (Local Disk)
- [Bugfix] Allow to switch to authentication with private key in login prompt (SFTP)

6.3.1
- [Feature] Read credentials from AWS configuration file in ~/.aws/credentials (S3)
- [Bugfix] Slow user interface performance (Mac) (#9970)
- [Bugfix] Prompt for credentials when using public key authentication with agent (SFTP) (#10148)
- [Bugfix] Failure opening files in vault on disk with long filename (Cryptomator, Local Disk)

6.3
- [Feature] Support for DRACOON cloud service (DRACOON)
- [Feature] Support for Google Team Drives (Google Drive) (#9928)
- [Feature] Support for Joyent Triton Object Storage (Triton)
- [Feature] Support for China (Beijing) region (S3)
- [Bugfix] Allow custom endpoint with default connection profile (S3)
- [Bugfix] Unnecessary password prompt for connection (Local Disk)
- [Bugfix] Login where authentication is required with both password and one-time passcode (SFTP)