@@ -54,6 +54,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -74,6 +75,11 @@
     <a href="https://trac.cyberduck.io/milestone/6.3.6"><strong>Version 6.3.6</strong></a>
 </p>
 <ul>
+    <li><span class="label label-warning">Bugfix</span> Support for Oracle Cloud Infrastructure (OCI) Object Storage
+        (S3) (<a
+            href="https://trac.cyberduck.io/ticket/10194">#10194</a>)
+
+    </li>
     <li><span class="label label-warning">Bugfix</span> Do not save passphrase for vaults by defaults (Cryptomator,
         Windows)
     </li>
