@@ -2,6 +2,7 @@ Cyberduck
 https://cyberduck.io/
 
 6.3.6
+- [Bugfix] Support for Oracle Cloud Infrastructure (OCI) Object Storage (S3) (#10194)
 - [Bugfix] Do not save passphrase for vaults by defaults (Cryptomator, Windows)
 - [Bugfix] Application freezes for long time when selecting many files for upload (Windows)
 
